# graphway

./: .gitmodules  Cargo.toml  aa.gql  query.gql  schema.gql  subg.gql
macros/: Cargo.toml
macros/src/: lib.rs
src/: fed.rs  main.rs
src/pass/: frag.rs  mod.rs  vars.rs
