[workspace]
members = ['.', 'macros']

[package]
name = "graphway"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }

graphql-parser = { path = "graphql-parser" }
graphway-macros = { path = "macros" }

axum = { version = "0.6.18", features = ["macros"] }
tower = { version = "0.4.13" }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

vecmap-rs = "0.1.11"
indexmap = "2.0.0"